# ai-search-learn

./: .env.template  .gitignore  LICENSE  hello.py  pyproject.toml
full-text-search/: 01_create-index.py  02_upload-document-payload.py  03_empty-query.py  04_term-query.py  05_filtering-query.py  06_scoping-field-query.py  07_add-facets-query.py  08_get-by-key.py  09_auto-complete.py
simple-rag/: chat-with-complex-query.py  chat.py
vector-search/: 01_create-index.rest  02_upload-document-payload.rest  03_run-single-query.rest  04_run-single-query-post-filter.rest  05_run-hybrid-query.rest  06_run-semantic-hybrid-query-with-query.rest
