[project]
name = "ai-search-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.11",
    "azure-identity>=1.19.0",
    "azure-search-documents==11.6.0b5",
    "ipykernel>=6.29.5",
    "openai>=1.59.3",
    "python-dotenv>=1.0.1",
]
